[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/final_challenge_background.PNG" type="Texture" id=1]
[ext_resource path="res://assets/tileset/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://src/eop/eop_mini_game_level.gd" type="Script" id=3]
[ext_resource path="res://font/bold_font_medium_overlay.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/eop/parallel_scrolling_background.gd" type="Script" id=5]
[ext_resource path="res://assets/running-terminal-animation/running_term3.png" type="Texture" id=6]
[ext_resource path="res://assets/running-terminal-animation/running_term4.png" type="Texture" id=7]
[ext_resource path="res://assets/running-terminal-animation/running_term1.png" type="Texture" id=8]
[ext_resource path="res://assets/running-terminal-animation/running_term2.png" type="Texture" id=9]
[ext_resource path="res://assets/running-cup-animation/running_cup1.png" type="Texture" id=10]
[ext_resource path="res://assets/running-cup-animation/running_cup4.png" type="Texture" id=11]
[ext_resource path="res://assets/running-cup-animation/running_cup3.png" type="Texture" id=12]
[ext_resource path="res://assets/running-cup-animation/running_cup2.png" type="Texture" id=13]
[ext_resource path="res://src/eop/eop_player.gd" type="Script" id=14]
[ext_resource path="res://src/eop/eop_enemy_player.gd" type="Script" id=27]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 25.1875, 25.2969 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=11]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 56.375, 40 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 652.5, 76 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 35.75, 382 )

[node name="EoPLevel" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 163, 670 )
limit_left = 0
limit_top = 0
limit_right = 4000
limit_bottom = 1100
editor_draw_limits = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_offset = Vector2( -200, 0 )
scroll_ignore_camera_zoom = true
script = ExtResource( 5 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 550, 429 )
scale = Vector2( 4.5, 4 )
texture = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 1, -398 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1048576, 3, 0, 1114112, 3, 0, 1114225, 536870915, 0, 1179648, 3, 0, 1179761, 536870915, 0, 1245184, 3, 0, 1245297, 536870915, 0, 1310720, 3, 0, 1310833, 536870915, 0, 1376256, 3, 0, 1376369, 536870915, 0, 1441792, 3, 0, 1441905, 536870915, 0, 1507328, 3, 0, 1507329, 0, 0, 1507330, 0, 0, 1507331, 0, 0, 1507332, 0, 0, 1507333, 0, 0, 1507334, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507337, 0, 0, 1507338, 0, 0, 1507339, 0, 0, 1507340, 0, 0, 1507341, 0, 0, 1507342, 0, 0, 1507343, 0, 0, 1507344, 0, 0, 1507345, 0, 0, 1507346, 0, 0, 1507347, 0, 0, 1507348, 0, 0, 1507349, 0, 0, 1507350, 0, 0, 1507351, 0, 0, 1507352, 0, 0, 1507353, 0, 0, 1507354, 0, 0, 1507355, 0, 0, 1507356, 0, 0, 1507357, 0, 0, 1507358, 0, 0, 1507359, 0, 0, 1507360, 0, 0, 1507361, 0, 0, 1507362, 0, 0, 1507363, 536870912, 0, 1507364, 536870912, 0, 1507365, 536870912, 0, 1507366, 536870912, 0, 1507367, 536870912, 0, 1507368, 536870912, 0, 1507369, 0, 0, 1507370, 0, 0, 1507371, 0, 0, 1507372, 0, 0, 1507373, 0, 0, 1507374, 0, 0, 1507375, 0, 0, 1507376, 0, 0, 1507377, 0, 0, 1507378, 0, 0, 1507379, 0, 0, 1507380, 0, 0, 1507381, 0, 0, 1507382, 0, 0, 1507383, 0, 0, 1507384, 0, 0, 1507385, 0, 0, 1507386, 0, 0, 1507387, 0, 0, 1507388, 0, 0, 1507389, 0, 0, 1507390, 0, 0, 1507391, 0, 0, 1507392, 0, 0, 1507393, 0, 0, 1507394, 0, 0, 1507395, 0, 0, 1507396, 536870912, 0, 1507397, 536870912, 0, 1507398, 536870912, 0, 1507399, 536870912, 0, 1507400, 536870912, 0, 1507401, 536870912, 0, 1507402, 536870912, 0, 1507403, 536870912, 0, 1507404, 536870912, 0, 1507405, 536870912, 0, 1507406, 536870912, 0, 1507407, 536870912, 0, 1507408, 536870912, 0, 1507409, 536870912, 0, 1507410, 536870912, 0, 1507411, 536870912, 0, 1507412, 536870912, 0, 1507413, 536870912, 0, 1507414, 536870912, 0, 1507415, 536870912, 0, 1507416, 536870912, 0, 1507417, 536870912, 0, 1507418, 536870912, 0, 1507419, 536870912, 0, 1507420, 536870912, 0, 1507421, 536870912, 0, 1507422, 536870912, 0, 1507423, 536870912, 0, 1507424, 0, 0, 1507425, 0, 0, 1507426, 0, 0, 1507427, 0, 0, 1507428, 0, 0, 1507429, 0, 0, 1507430, 0, 0, 1507431, 0, 0, 1507432, 536870917, 0, 1507433, 536870917, 0, 1507434, 536870917, 0, 1507435, 536870917, 0, 1507436, 536870917, 0, 1507437, 0, 0, 1507438, 0, 0, 1507439, 0, 0, 1507440, 0, 0, 1507441, 536870921, 0, 1572864, 3, 0, 1638400, 3, 0, 1703936, 3, 0, 1704038, 536870914, 0, 1704039, 536870917, 0, 1704040, 536870917, 0, 1704041, 536870917, 0, 1704042, 536870917, 0, 1704043, 536870917, 0, 1704044, 536870917, 0, 1769472, 3, 0, 1769524, 536870926, 0, 1769548, 536870914, 0, 1769573, 536870914, 0, 1835008, 3, 0, 1835060, 536870923, 0, 1835083, 536870914, 0, 1835108, 536870914, 0, 1835110, 536870919, 0, 1900544, 3, 0, 1900591, 536870914, 0, 1900592, 536870912, 0, 1900593, 536870912, 0, 1900594, 536870912, 0, 1900595, 536870912, 0, 1900596, 536870912, 0, 1900597, 536870912, 0, 1900618, 536870914, 0, 1900620, 536870919, 0, 1900643, 536870914, 0, 1900645, 536870919, 0, 1900646, 536870919, 0, 1966080, 3, 0, 1966126, 536870914, 0, 1966127, 536870914, 0, 1966128, 536870919, 0, 1966129, 536870919, 0, 1966130, 536870919, 0, 1966131, 536870919, 0, 1966132, 536870919, 0, 1966133, 536870919, 0, 1966153, 536870914, 0, 1966155, 536870919, 0, 1966156, 536870919, 0, 1966178, 536870914, 0, 1966180, 536870919, 0, 1966181, 536870919, 0, 1966182, 536870919, 0, 2031616, 3, 0, 2031661, 536870914, 0, 2031662, 536870914, 0, 2031664, 536870919, 0, 2031665, 536870919, 0, 2031666, 536870919, 0, 2031667, 536870919, 0, 2031668, 536870919, 0, 2031669, 536870919, 0, 2031674, 3, 0, 2031688, 536870914, 0, 2031690, 536870919, 0, 2031691, 536870919, 0, 2031692, 536870919, 0, 2031713, 536870914, 0, 2031715, 536870919, 0, 2031716, 536870919, 0, 2031717, 536870919, 0, 2031718, 536870919, 0, 2097152, 3, 0, 2097177, 536870926, 0, 2097196, 536870914, 0, 2097197, 536870914, 0, 2097199, 536870919, 0, 2097200, 536870919, 0, 2097201, 536870919, 0, 2097202, 536870919, 0, 2097203, 536870919, 0, 2097204, 536870919, 0, 2097205, 536870919, 0, 2097210, 3, 0, 2097216, 536870923, 0, 2097220, 536870926, 0, 2097223, 536870914, 0, 2097225, 536870919, 0, 2097226, 536870919, 0, 2097227, 536870919, 0, 2097228, 536870919, 0, 2097248, 536870914, 0, 2097250, 536870919, 0, 2097251, 536870919, 0, 2097252, 536870919, 0, 2097253, 536870919, 0, 2097254, 536870919, 0, 2162688, 3, 0, 2162713, 536870923, 0, 2162731, 536870914, 0, 2162732, 536870914, 0, 2162734, 536870919, 0, 2162735, 536870919, 0, 2162736, 536870919, 0, 2162737, 536870919, 0, 2162738, 536870919, 0, 2162739, 536870919, 0, 2162740, 536870919, 0, 2162741, 536870919, 0, 2162745, 3, 0, 2162748, 3, 0, 2162749, 0, 0, 2162750, 0, 0, 2162751, 0, 0, 2162752, 0, 0, 2162756, 536870924, 0, 2162758, 536870914, 0, 2162760, 536870919, 0, 2162761, 536870919, 0, 2162762, 536870919, 0, 2162763, 536870919, 0, 2162764, 536870919, 0, 2162783, 536870914, 0, 2162785, 536870919, 0, 2162786, 536870919, 0, 2162787, 536870919, 0, 2162788, 536870919, 0, 2162789, 536870919, 0, 2162790, 536870919, 0, 2228224, 3, 0, 2228225, 0, 0, 2228226, 0, 0, 2228227, 0, 0, 2228228, 0, 0, 2228229, 0, 0, 2228230, 0, 0, 2228231, 0, 0, 2228232, 0, 0, 2228233, 0, 0, 2228234, 0, 0, 2228235, 0, 0, 2228236, 0, 0, 2228237, 0, 0, 2228238, 0, 0, 2228239, 0, 0, 2228244, 0, 0, 2228245, 0, 0, 2228246, 0, 0, 2228247, 0, 0, 2228248, 0, 0, 2228249, 0, 0, 2228250, 0, 0, 2228251, 6, 0, 2228254, 0, 0, 2228255, 536870912, 0, 2228256, 0, 0, 2228257, 0, 0, 2228265, 536870912, 0, 2228266, 536870912, 0, 2228267, 0, 0, 2228268, 0, 0, 2228269, 536870919, 0, 2228270, 536870919, 0, 2228271, 536870919, 0, 2228272, 536870919, 0, 2228273, 536870919, 0, 2228274, 536870919, 0, 2228275, 536870919, 0, 2228276, 536870919, 0, 2228277, 536870919, 0, 2228278, 0, 0, 2228279, 0, 0, 2228280, 0, 0, 2228281, 0, 0, 2228282, 0, 0, 2228283, 0, 0, 2228284, 0, 0, 2228285, 0, 0, 2228286, 3, 0, 2228287, 0, 0, 2228288, 0, 0, 2228289, 0, 0, 2228290, 0, 0, 2228291, 0, 0, 2228292, 0, 0, 2228293, 0, 0, 2228294, 536870916, 0, 2228295, 536870919, 0, 2228296, 536870919, 0, 2228297, 536870919, 0, 2228298, 536870919, 0, 2228299, 536870919, 0, 2228300, 536870919, 0, 2228305, 0, 0, 2228306, 0, 0, 2228308, 0, 0, 2228309, 0, 0, 2228310, 0, 0, 2228318, 536870914, 0, 2228320, 536870919, 0, 2228321, 536870919, 0, 2228322, 536870919, 0, 2228323, 536870919, 0, 2228324, 536870919, 0, 2228325, 536870919, 0, 2228326, 536870919, 0, 2293776, 0, 0, 2293777, 0, 0, 2293778, 0, 0, 2293779, 0, 0, 2293791, 3, 0, 2293800, 3, 0, 2293847, 0, 0, 2293848, 0, 0, 2293849, 0, 0, 2293850, 0, 0, 2293851, 0, 0, 2293852, 0, 0, 2293853, 0, 0, 2293854, 0, 0, 2293855, 0, 0, 2359327, 3, 0, 2359328, 536870912, 0, 2359329, 536870912, 0, 2359336, 3, 0, 2424863, 3, 0, 2424870, 536870912, 0, 2424871, 536870912, 0, 2424872, 3, 0, 2490399, 3, 0, 2490400, 536870912, 0, 2490401, 536870912, 0, 2490402, 536870912, 0, 2490403, 536870912, 0, 2490404, 536870912, 0, 2490405, 536870912, 0 )

[node name="LevelTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameInformationContainer" type="HBoxContainer" parent="CanvasLayer"]
visible = false
margin_right = 1500.0
margin_bottom = 130.0
rect_min_size = Vector2( 1500, 130 )
alignment = 1

[node name="Score" type="RichTextLabel" parent="CanvasLayer/GameInformationContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 373.0
margin_right = 773.0
margin_bottom = 130.0
rect_min_size = Vector2( 400, 130 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "Points: 0
"
text = "Points: 0
"

[node name="Time" type="RichTextLabel" parent="CanvasLayer/GameInformationContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 777.0
margin_right = 1127.0
margin_bottom = 130.0
rect_min_size = Vector2( 350, 130 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "Time: 20"
text = "Time: 20"

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 190, 670 )
script = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
scale = Vector2( 0.208333, 0.1875 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 0.703125 )
shape = SubResource( 9 )

[node name="PlatformDetector" type="RayCast2D" parent="Player"]
enabled = true
cast_to = Vector2( 0, 6 )

[node name="PlayerEnemy" type="KinematicBody2D" parent="."]
position = Vector2( 500, 303 )
script = ExtResource( 27 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="PlayerEnemy"]
position = Vector2( -32, 4 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerEnemy"]
shape = SubResource( 11 )

[node name="WallDetector" type="RayCast2D" parent="PlayerEnemy"]
enabled = true
cast_to = Vector2( 60, 0 )

[node name="Area2D" type="Area2D" parent="PlayerEnemy"]
position = Vector2( -500, -300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerEnemy/Area2D"]
position = Vector2( 461, 296 )
shape = SubResource( 6 )

[node name="WallOfDeath" type="Area2D" parent="."]

[node name="CollisionShapeBottom" type="CollisionShape2D" parent="WallOfDeath"]
position = Vector2( 655, 1118 )
shape = SubResource( 7 )

[node name="CollisionShapeLeft" type="CollisionShape2D" parent="WallOfDeath"]
position = Vector2( -115, 380 )
shape = SubResource( 8 )

[connection signal="player_triggered_end" from="PlayerEnemy" to="." method="_on_Enemy_player_triggered_end"]
[connection signal="player_triggered_end" from="PlayerEnemy" to="Player" method="_on_Enemy_player_triggered_end"]
[connection signal="body_entered" from="PlayerEnemy/Area2D" to="PlayerEnemy" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="WallOfDeath" to="." method="_on_WallOfDeath_body_entered"]
